<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtManMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/temp_max_min"
            android:textColor="#343a40"
            app:layout_constraintBottom_toBottomOf="@+id/imgTemp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgTemp" />

        <ImageView
            android:id="@+id/imgTemp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtDay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtTempState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:text="@string/temp_state"
            android:textColor="#343a40"
            app:layout_constraintBottom_toBottomOf="@+id/imgTemp"
            app:layout_constraintEnd_toStartOf="@+id/txtManMin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imgTemp"
            app:layout_constraintTop_toTopOf="@+id/imgTemp"
            app:layout_constraintVertical_bias="0.517" />

        <TextView
            android:id="@+id/txtDay"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/day_name"
            android:textColor="#343a40"
            app:layout_constraintBottom_toBottomOf="@+id/imgTemp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imgTemp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>